[add-react-chatbot-plugin-setup] added a way to autoload script

--- a/chatbot/src/index.html
+++ b/chatbot/src/index.html
@@ -6,6 +6,6 @@
   <title>React App with TypeScript</title>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="siteware-root"></div>
 </body>
 </html>
